@@ -9,3 +9,4 @@ Type=Application
 Categories=X-XFCE;Settings;DesktopSettings;X-XfceSettingsDialog;
 OnlyShowIn=XFCE;
 _GenericName=Autostarted Applications
+X-XfcePluggable=true
