@@ -1,3 +1,12 @@
+2008-09-15	Jannis Pohlmann <jannis@xfce.org>
+
+	* xfce4-autostart-editor/main.c, 
+	  xfce4-autostart-editor/xfae-window.{c,h},
+	  xfce4-autostart-editor/xfce4-autostart-editor.desktop.in: Add 
+	  embedding support to the autostart editor. I suppose there is a 
+	  better way to do it with the existing code, but it works and it's
+	  that much of a mess.
+
 2008-09-14	Jannis Pohlmann <jannis@xfce.org>
 
 	* settings/session/session.c, settings/splash/splash.c: Add embedding
